syntax = "proto3";

package kurrentdb.protocol.v2.indexes;

option csharp_namespace = "KurrentDB.Protocol.V2.Indexes";

import "indexes/shared.proto";

message CreateIndexRequest {
  string name = 1;
  string filter = 2;
  reserved 3; // filter type
  repeated IndexField fields = 4;
  optional bool start = 5; // if unspecified: treated as true
}

message CreateIndexResponse {
}

message StartIndexRequest {
  string name = 1;
}

message StartIndexResponse {
}

message StopIndexRequest {
  string name = 1;
}

message StopIndexResponse {
}

message DeleteIndexRequest {
  string name = 1;
}

message DeleteIndexResponse {
}
