syntax = "proto3";

package kurrentdb.protocol.v2.indexes;

option csharp_namespace = "KurrentDB.Protocol.V2.Indexes";

import "indexes/shared.proto";
import "google/protobuf/timestamp.proto";

message IndexCreated {
  string name = 1;
  string filter = 2;
  repeated IndexField fields = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message IndexStarted {
  string name = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message IndexStopped {
  string name = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message IndexDeleted {
  string name = 1;
  google.protobuf.Timestamp timestamp = 2;
}
